--- a/app/views/static_pages/proposal.html.erb
+++ b/app/views/static_pages/proposal.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#proposal</h1>
+<% provide(:title, 'Proposal') %>
+<h1>Proposal</h1>
 <p>Find me in app/views/static_pages/proposal.html.erb</p>
