--- a/app/views/static_pages/registration.html.erb
+++ b/app/views/static_pages/registration.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#registration</h1>
+<% provide(:title, 'Registration') %>
+<h1>Registration</h1>
 <p>Find me in app/views/static_pages/registration.html.erb</p>
