--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,12 +4,12 @@
       <%= link_to "Quint State", '#', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    '#' %></li>
-          <li><%= link_to "Schedule",    '#' %></li>
-          <li><%= link_to "Registration",    '#' %></li>
-          <li><%= link_to "Proposal Submission", '#' %></li>
-          <li><%= link_to "FAQ", '#' %></li>
-          <li><%= link_to "Contact", '#' %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Proposal Submission", proposal_path %></li>
+          <li><%= link_to "Registration", registration_path %></li>
+          <li><%= link_to "Schedule", schedule_path %></li>
+          <li><%= link_to "FAQ", faq_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
       </nav>
