--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
-  <h1>Home</h1>
+  <h1>Quint State Conference at UGA</h1>
 
   <h2>
     This is the home page for the
