--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#schedule</h1>
+<% provide(:title, 'Schedule') %>
+<h1>Schedule</h1>
 <p>Find me in app/views/static_pages/schedule.html.erb</p>
