--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Quint State", '#', id: "logo" %>
+      <%= link_to "Quint State", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
@@ -10,7 +10,7 @@
           <li><%= link_to "Schedule", schedule_path %></li>
           <li><%= link_to "FAQ", faq_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
-          <li><%= link_to "Sign in", '#' %></li>
+          <li><%= link_to "Sign in", signup_path %></li>
         </ul>
       </nav>
     </div>
