Josh: add registration scaffold

--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, 'Schedule') %>
 <h1>Schedule</h1>
 <p>Find me in app/views/static_pages/schedule.html.erb</p>
+<%= @palindrome %>
