--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,11 +6,10 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Proposal Submission", proposal_path %></li>
-          <li><%= link_to "Registration", registration_path %></li>
+          <li><%= link_to "Registration", new_registration_path %></li>
           <li><%= link_to "Schedule", schedule_path %></li>
           <li><%= link_to "FAQ", faq_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
-          <li><%= link_to "Sign in", signup_path %></li>
         </ul>
       </nav>
     </div>
