Modify routes, alter proposal model, alter header links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Proposal Submission", new_proposal_path %></li>
-          <li><%= link_to "Registration", new_registration_path %></li>
+          <li><%= link_to "Proposal Submission", '/submit/proposal' %></li>
+          <li><%= link_to "Registration", '/submit/registration' %></li>
           <li><%= link_to "Schedule", schedule_path %></li>
           <li><%= link_to "FAQ", faq_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
