--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <li><%= link_to "Registration", '/submit/registration' %></li>
           <li><%= link_to "Schedule", schedule_path %></li>
           <li><%= link_to "FAQ", faq_path %></li>
-          <li><%= link_to "Contact", contact_path %></li>
+          <li><%= link_to "Contact", '/contact_us' %></li>
         </ul>
       </nav>
     </div>
