--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New proposal</h1>
 
+<div class="alert alert-success"><%= notice %></div>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', proposals_path %>
