Thank you mailer and Request mailer

--- a/app/views/contact_mailer/thank_you.html.erb
+++ b/app/views/contact_mailer/thank_you.html.erb
@@ -4,8 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Thank you for contacting the UGA board for Quint State</h1>
-    <p>Your request will be responded to as soon as possible. If you have an urgent request you may call 1-800-123-1234</p>
-    <p>- Thank you, <strong>UGA Board</strong></p>
+    <p>Thank you <%= @user.name %> for contacting the Quint State committee. Your request will be responded to as soon as possible. If you have an urgent request you may call us at 1-800-123-1234</p>
+    <p>- Thank you, <strong>Quint State committee</strong></p>
   </body>
 </html>
