--- a/app/views/contact_mailer/thank_you.text.erb
+++ b/app/views/contact_mailer/thank_you.text.erb
@@ -1,6 +1,6 @@
-Thank you for contacting the UGA board for Quint State
+Thank you for contacting the Quint State committee
 ===============================================
 
-Your request will be responded to as soon as possible. If you have an urgent request you may call 1-800-123-1234
+Thank you <%= @user.name %> for contacting the Quint State committee. Your request will be responded to as soon as possible. If you have an urgent request you may call us at 1-800-123-1234
 
 Thank you, UGA Board
