Add figaroa gem, adjust form for contact

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_area :questions %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Send Message' %>
   </div>
 <% end %>
