--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,34 @@
-<div class="center hero-unit">
-  <h1>Quint State Conference at UGA</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+<div class="jumbotron">
+  <div class="container-fluid">
+    <h1>Hello, world!</h1>
+    <p>...</p>
+    <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+  </div>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<div class="call-to-action">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Are you ready to get involved?</h2>
+        <p>The conference of 2015 is taking place at UGA. If you are planning on attending please register below. For presentations proposals need to be submitted by 00/00/0000.</p>
+        <%= link_to "Registration", '/submit/registration', :class => 'btn btn-primary' %>
+        <%= link_to "Proposal Submission", '/submit/proposal', :class => 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="school-information">
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4"><%= image_tag "UGA/thick4c.jpg" %></div>
+        <div class="col-md-8">
+          <h3>University of Georgia</h3>
+          <h5>Human Development and Family Sciences, MFT</h5>
+          <p>Tell them about the university. Tell them about the school. What are you proud of?</p>
+          <a href="http://spock.fcs.uga.edu/cfd/mft/">HDFS Department</a>&nbsp;|&nbsp;<a href="http://uga.edu/">UGA Homepage</a>
+        </div>
+    </div>
+  </div>
+</div>
