--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
 
 <%= render 'layouts/header' %>
 
+<% if signed_in? %>
+<%= link_to "Proposals", proposals_path, method: "get" %>
+<%= link_to "Registrations", registrations_path, method: "get" %>
+<%= link_to "Contact Form Log", contacts_path, method: "get" %>
+<%= link_to "Sign out", signout_path, method: "delete" %>
+<% end %>
+
+
 <div class="main-content">
     <%= yield %>
 </div>
