Home page styles, font styles, font choices, container-fluid on each page

--- a/app/assets/stylesheets/core/_boilerplate.scss
+++ b/app/assets/stylesheets/core/_boilerplate.scss
@@ -8,4 +8,12 @@
 }
 
 // Sticky footer awesomeness!
-@include sticky-footer (150px, '.main-content', '.footer');
+@include sticky-footer (45px, '.main-content', '.footer');
+
+
+a {
+    &:hover {
+        text-decoration: none;
+    }
+}
+
