--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,8 @@
-<h1>Send Us a Message</h1>
+<% provide(:title, 'Contact') %>
+<div class="container-fluid">
+    <h1>Send Us a Message</h1>
 
-<%= notice %>
+    <%= notice %>
 
-<%= render 'form' %>
+    <%= render 'form' %>
+</div>
