--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,7 +1,10 @@
-<h1>New proposal</h1>
+<% provide(:title, 'Proposal') %>
+<div class="container-fluid">
+    <h1>Submit proposal</h1>
 
-<%= notice %>
+    <%= notice %>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', proposals_path %>
+    <%= link_to 'Back', proposals_path %>
+</div>
