--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: $darkGray;
     color: #777;
-    padding:30px 0;
+    padding-top: 15px;
     small {
         display: block;
     }
