--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#quint-menu">
@@ -7,7 +7,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Quint State", root_path, id: "logo" %>
+        <%= link_to "QUINT STATE", root_path, id: "logo" %>
+        <small>@ UGA</small>
       </div><!-- End Navbar header -->
 
       <div class="collapse navbar-collapse" id="quint-menu">
