--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New registration</h1>
+<% provide(:title, 'Registration') %>
+<div class="container-fluid">
+    <h1>Register for the Conference</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', registrations_path %>
+    <%= link_to 'Back', registrations_path %>
+</div>
