--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Schedule') %>
-<h1>Schedule</h1>
-<p>Find me in app/views/static_pages/schedule.html.erb</p>
-<%= @palindrome %>
+<div class="container-fluid">
+    <h1>Schedule</h1>
+    <p>Find me in app/views/static_pages/schedule.html.erb</p>
+</div>
