Fix for admin pages

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,5 +22,14 @@
         </ul>
       </div><!-- End collapse section -->
 
+    <% if signed_in? %>
+      <strong>Admin Menu</strong>
+      <%= link_to "Proposals", proposals_path, method: "get" %>
+      <%= link_to "Registrations", registrations_path, method: "get" %>
+      <%= link_to "Contact Form Log", contacts_path, method: "get" %>
+      <%= link_to "Sign out", signout_path, method: "delete" %>
+    <% else %>
+      Nope
+    <% end %>
     </div><!-- End container -->
 </nav><!-- End header nav -->
