--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @proposal %> |
-<%= link_to 'Back', proposals_path %>
+<%= link_to 'Show', @proposal %>
