--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -1,5 +1,83 @@
 <% provide(:title, 'Schedule') %>
 <div class="container-fluid">
     <h1>Schedule</h1>
-    <p>Find me in app/views/static_pages/schedule.html.erb</p>
+
+    <div class="container">
+        <ul class="timeline">
+            <li><h2>Thursday February 27th, 2014</h2><small>Another Location</small></li>
+            <li>
+              <div class="timeline-badge"><i class="fa fa-users"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Welcome Social Event</h4>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 6:00pm - 8:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p>Quint State check-in with schedule and name tag. Meet and greet.</p>
+                </div>
+              </div>
+            </li>
+
+
+            <hr />
+            <!-- End Thursday -->
+            <li><h2>Friday Februrary 28th, 2014</h2><small>Black Cultural Center and University Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-coffee"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Breakfast and Registration</h4>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 8:00am - 9:00am</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p>(need more info)</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge info"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Presentation #1</h4>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 9:30am - 10:30am</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+
+                </div>
+              </div>
+            </li>
+            <li>
+            <div class="timeline-badge info"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Presentation #2</h4>
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+                <div class="timeline-badge info"><i class="fa fa-spoon"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Lunch</h4>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 12:00am - 1:30am</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p>Om nom nom nom.</p>
+                </div>
+              </div>
+            </li>
+
+            <hr />
+            <!-- End Friday -->
+            <li><h2>Saturday Februrary 28th, 2014</h2><small>Another Building</small></li>
+
+        </ul>
+    </div>
+
 </div>
