--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -50,5 +50,4 @@
   <%= @proposal.additional_information %>
 </p>
 
-<%= link_to 'Edit', edit_proposal_path(@proposal) %> |
-<%= link_to 'Back', proposals_path %>
+<%= link_to 'Edit', edit_proposal_path(@proposal) %>
