--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -15,5 +15,4 @@
   <%= @contact.questions %>
 </p>
 
-<%= link_to 'Edit', edit_contact_path(@contact) %> |
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'Edit', edit_contact_path(@contact) %>
