--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -60,5 +60,4 @@
   <%= @registration.additional_information %>
 </p>
 
-<%= link_to 'Edit', edit_registration_path(@registration) %> |
-<%= link_to 'Back', registrations_path %>
+<%= link_to 'Edit', edit_registration_path(@registration) %>
